libs/@local/hashql/ast/tests/ui/lower/expander/labeled-argument-access.jsonc
//@ run: fail
//@ description: labeled arguments are not allowed in `access`
[
  "::kernel::special_form::access",
  { "#literal": "hello" },
  "name",
  { ":extra": { "#literal": 0 } }
  //~^ ERROR labeled arguments are not allowed in `.`
]
